[metadata]
name = SnakeGameDhvip9
version = 0.1.1
author = Dhvip9
author_email = dhvipdp@gmail.com
description = Easy to Make SnakeGame
long_description = file: README.md
long_description_content_type = CHANGELOG.txt
url = https://github.com/dhvip9/SnakeGame-Package
project_urls =
    Bug Tracker = https://github.com/dhvip9/SnakeGame-Package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
